--- a/doc/mcu-esp32.ltx
+++ b/doc/mcu-esp32.ltx
@@ -3,8 +3,8 @@
 \usepackage{graphicx}
 \graphicspath{ {./images/} }
 \usepackage{hyperref}
-\usepackage{shorttoc}
-
+\usepackage{tikz}
+\usetikzlibrary{shapes, positioning, arrows.meta}
 
 \title{Notes on Home Treadmill}
 \author{Manuel Escriche}
@@ -246,8 +246,48 @@ Several RTOS tasks are created in order to attend all events happening while con
 \item Main task that supervises status, working time, and records speed race.
 \end{itemize}
 
+\paragraph{}
 A blackboard is used to share information among tasks.
 
+\paragraph{}
+It's important to know the system behaves according to four modes:
+
+\begin{figure}[h!]
+\centering
+\begin{tikzpicture}
+[start/.style={circle,draw=black,fill=black},
+key/.style={rectangle,draw=black, minimum size=4mm},
+state/.style={ellipse,draw=black, thick, inner sep=3pt,minimum size=5mm},
+pre/.style={<-,shorten <=1pt, >={Stealth[round]}, semithick},
+post/.style={->, shorten >=1pt, >={Stealth[round]},semithick}]
+
+\node[start]   (init) {};
+\node[key] (k1) [right=1.5cm of init] {k1};
+\node[key] (k0) [right=2mm of k1] {k0};
+\node[state]  (conf)  [below= of init] {CONF};
+\node[state]  (run) [below= of conf] {RUN};
+\node[state]  (pause) [right=of run] {PAUSE};
+\node[state]  (report) [below=of run] {REPORT};
+\draw[post] (init) to (conf);
+\draw[post] (conf) to node[auto,swap]{k0} (run) ;
+\draw[post, bend left=30] (run.15) to node[auto]{k1} (pause.165);
+\draw[post, bend left=30] (pause.195) to node[auto,swap]{k1} (run.345);
+\draw[post] (pause) to node[auto]{k0} (report.10);
+\draw[post, bend left=90] (pause.south) .. controls +(down:12mm) .. node[auto]{time $>$ 5 min} (report.east);
+\draw[post] (run) to node[auto,swap]{k0}  (report);
+\draw[post, bend left=60] (report.west) to  node[auto]{k0/k1} (conf.west);
+\node (lk1) [right=of k0]    {\shortstack[l]{k0=start/stop \\ k1=pause/conf}};
+\end{tikzpicture}
+\caption{State diagram}
+\end{figure}
+
+\begin{description}
+\item[CONF] it refers to Configuration. It allows going into manual control where the user sets the reference speed and slope, and the speed program mode, where the user selects a specific speed program for the session. 
+\item[RUN] Once the start/stop key is pushed the motor runs according to reference speed. The key start/stop allows getting in and out. 
+\item[PAUSE] The pause key allows to temporarily stop the motor to take a breath, drink water, or anything. Maximum time in pause is 5 minutes. User get in and out by pushing on pause key.
+\item[REPORT] Once stop key is pushed, the race report is shown on screen. By pushing start/stop or pause/conf keys you  move on to Configuration in order to allow a new session.
+\end{description}
+\paragraph{}
 Software has been structured in components:
 
 \begin{figure}[h!]
@@ -255,6 +295,10 @@ Software has been structured in components:
 \includegraphics[scale=0.5]{SoftCom}
 \caption{home treadmill software components}
 \end{figure}
+
+
+
+
 
 \newpage
 \section{Figures and Tables}
